--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Npgsql" Version="6.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Complete\" />
+  </ItemGroup>
+
 </Project>
